--- a/src/languages/en.json
+++ b/src/languages/en.json
@@ -2620,7 +2620,7 @@
         },
         "info_creador": {
             "texto1": [
-                "—◉ My creator's number is wa.me/5219992095479",
+                "—◉ My creator's number is wa.me/56983073328",
                 "—◉ Collaborator 1's number is wa.me/34642467703",
                 "—◉ Collaborator 2's number is wa.me/50499698072",
                 "—◉ Collaborator 3's number is wa.me/595986460945",
@@ -2651,17 +2651,17 @@
                 "➤ BANK: STP",
                 "➤ BENEFICIARY: Bruno Sobrino",
                 "➤ CONCEPT: SUPPORT",
-                "➤ PAYPAL: https://www.paypal.me/BrunoSob",
+                "➤ PAYPAL: https://www.paypal.me/ineffablexmvrco",
                 "👉🏻 CONTACT IF NECESSARY",
                 "MORE DATA AND TO THANK",
-                "wa.me/5219992095479"
+                "wa.me/56983073328"
             ]
         },
         "info_estado": {
             "texto1": [
                 "*< INFORMATION - STATE />*_",
                 "▢ *Owner:* Bruno Sobrino",
-                "▢ *WA:* +5219992095479",
+                "▢ *WA:* +56983073328",
                 "▢ *PayPal:* paypal.me/BrunoSob",
                 "▢ *Ping:*",
                 "▢ *Uptime:*",
@@ -2975,7 +2975,7 @@
                 "*- Commit message:*",
                 "*- Committed by:*"
             ],
-       "texto3": "*[❗️] local changes have been made in bot files that conflict with the updates of the repository. To update, reinstall the bot or perform the updates manually.*\n\n*conflict files:*"
+            "texto3": "*[❗️] local changes have been made in bot files that conflict with the updates of the repository. To update, reinstall the bot or perform the updates manually.*\n\n*conflict files:*"
         },
         "owner_add_del_owner": {
             "texto1": [
@@ -3260,11 +3260,11 @@
             "texto2": "The image does not exist in the root folder."
         },
         "owner_actualizar": {
- "texto1": "*_< OWNER - UPDATE />_*\n\n*[✅] There are no pending updates.*",
- "texto2": "*_< OWNER - UPDATE />_*\n\n*[ℹ️] Update completed successfully.*\n\n",
- "texto3": "*_< OWNER - UPDATE />_*\n\n*[ℹ️] local changes have been made in bot files that conflict with the updates of the repository. To update, reinstall the bot or perform the updates manually.*\n\n*conflict files:*",
- "texto4": "*_< OWNER - UPDATE />_*\n\n*[ℹ️] A mistake occurred. Please try it again later.*"
- },
+            "texto1": "*_< OWNER - UPDATE />_*\n\n*[✅] There are no pending updates.*",
+            "texto2": "*_< OWNER - UPDATE />_*\n\n*[ℹ️] Update completed successfully.*\n\n",
+            "texto3": "*_< OWNER - UPDATE />_*\n\n*[ℹ️] local changes have been made in bot files that conflict with the updates of the repository. To update, reinstall the bot or perform the updates manually.*\n\n*conflict files:*",
+            "texto4": "*_< OWNER - UPDATE />_*\n\n*[ℹ️] A mistake occurred. Please try it again later.*"
+        },
         "random_kpop": {
             "texto1": [
                 "Usage",
@@ -3859,6 +3859,5 @@
             "bk9LText_T": "If you want it without customization,:\n.bk9short and put a link\nExample:\n.bk9short https://bk9.site/\nIf you want it to be customized :\n.Short, put a link + the word\nExample:\n.bk9short https://bk9.site/ + Suii",
             "bk9LTaked_T": "This customization has been taken, try another one."
         }
-
-        }
+    }
 }
