--- a/src/languages/fr.json
+++ b/src/languages/fr.json
@@ -2380,14 +2380,14 @@
             "texto1": [
                 "*𝙷𝙾𝙻𝙰 𝚄𝚂𝚄𝙰𝚁𝙸𝙾 👋🏻, 𝙰𝚀𝚄𝙸 𝙴𝚂𝚃𝙰 𝙴𝙼 𝙰𝙻𝙶𝚄𝙽𝚂 𝙶𝚁𝚄𝙿𝙾𝚂 𝙳𝙾 𝚂𝙷𝙰𝙳𝙾𝚆 𝙱𝚁𝙾𝙺𝙴𝚁𝚂 - 𝚃𝙴𝙰𝙼 𝙿𝙰𝚁𝙰 𝙲𝙾𝙽𝚅𝙸𝚅𝙸𝚁 𝙲𝙾𝙼 𝙻𝙰 𝙲𝙾𝙼𝚄𝙽𝙸𝙳𝙰𝙳𝙴 :D*",
                 "*➤ Groupes officiels du Bot :*",
-                "*1.-* https://chat.whatsapp.com/LjJbmdO0qSDEKgB60qivZj",
-                "*2.-* https://chat.whatsapp.com/DbXBmsydWBE1ZN3EoY0hRs",
-                "*3.-* https://chat.whatsapp.com/BW0P22xx7EGBTdH5IM851F",
-                "*4.-* https://chat.whatsapp.com/CjexkGVr37J6GuSdDVAHzC",
-                "*5.-* https://chat.whatsapp.com/DLrFJUPxEQ2IrOm7sJWJ0k"
+                "*1.-* https://chat.whatsapp.com/IAHpXVSTVbC7xk17kAqRzo",
+                "*2.-* https://chat.whatsapp.com/IAHpXVSTVbC7xk17kAqRzo",
+                "*3.-* https://chat.whatsapp.com/IAHpXVSTVbC7xk17kAqRzo",
+                "*4.-* https://chat.whatsapp.com/IAHpXVSTVbC7xk17kAqRzo",
+                "*5.-* https://chat.whatsapp.com/IAHpXVSTVbC7xk17kAqRzo"
             ],
             "texto2": "「  Bonjour le Monde 」",
-            "texto3": "ᴇʟ ᴍᴇᴊᴏʀ ʙᴏᴛ ᴅᴇ ᴡʜᴀᴛsᴀᴘᴘ⁩"
+            "texto3": "🇹​​​​​🇺​​​​​ 🇰​​​​​🇨​​​​​🇭​​​​​🇪​​​​​🇷​​​​​🇴​​​​​ 🇰​​​​​🇮​​​​​🇱​​​​​🇱​​​​​🇿🇳​​​​​⁩"
         },
         "info_host": {
             "texto1": [
