--- a/src/languages/es.json
+++ b/src/languages/es.json
@@ -2649,14 +2649,14 @@
             "texto1": [
                 "𝐃𝐎𝐍𝐀𝐑",
                 "𝙷𝙾𝙻𝙰",
-                "👉🏻 𝙰𝚀𝚄𝙸 𝙰𝙻𝙶𝚄𝙽𝙾𝚂 𝙳𝙰𝚃𝙾𝚂*",
-                "𝙿𝙾𝚁 𝚂𝙸 𝙶𝚄𝚂𝚃𝙰𝚂 𝙰𝙿𝙾𝚈𝙰𝚁 :𝟹*",
-                "➤ 𝙱𝙴𝙽𝙴𝙵𝙸𝙲𝙸𝙰𝚁𝙸𝙾: Tu kchero 𝗞𝗶𝗹𝗹𝘇𝗡* ",
-                "➤ 𝙲𝙾𝙽𝙲𝙴𝙿𝚃𝙾: APOYO*",
-                "➤ 𝙿𝙰𝚈𝙿𝙰𝙻: https://www.paypal.me/ineffablexmvrco*",
-                "👉🏻 𝙲𝙾𝙽𝚃𝙰𝙲𝚃𝙰𝙼𝙴 𝚂𝙸 𝙽𝙴𝙲𝙴𝚂𝙸𝚃𝙰𝚂*",
-                "𝙼𝙰𝚂 𝙳𝙰𝚃𝙾𝚂 𝚈 𝙿𝙰𝚁𝙰 𝙰𝙶𝚁𝙰𝙳𝙴𝙲𝙴𝚁𝚃𝙴*",
-                "wa.me/56983073328*"
+                "👉🏻 𝙰𝚀𝚄𝙸 𝙰𝙻𝙶𝚄𝙽𝙾𝚂 𝙳𝙰𝚃𝙾𝚂",
+                "𝙿𝙾𝚁 𝚂𝙸 𝙶𝚄𝚂𝚃𝙰𝚂 𝙰𝙿𝙾𝚈𝙰𝚁 :𝟹",
+                "➤ 𝙱𝙴𝙽𝙴𝙵𝙸𝙲𝙸𝙰𝚁𝙸𝙾: Tu kchero 𝗞𝗶𝗹𝗹𝘇𝗡",
+                "➤ 𝙲𝙾𝙽𝙲𝙴𝙿𝚃𝙾: APOYO",
+                "➤ 𝙿𝙰𝚈𝙿𝙰𝙻: paypal.me/ineffablexmvrco",
+                "👉🏻 𝙲𝙾𝙽𝚃𝙰𝙲𝚃𝙰𝙼𝙴 𝚂𝙸 𝙽𝙴𝙲𝙴𝚂𝙸𝚃𝙰𝚂",
+                "𝙼𝙰𝚂 𝙳𝙰𝚃𝙾𝚂 𝚈 𝙿𝙰𝚁𝙰 𝙰𝙶𝚁𝙰𝙳𝙴𝙲𝙴𝚁𝚃𝙴",
+                "wa.me/56983073328"
             ]
         },
         "info_estado": {
@@ -2887,14 +2887,14 @@
         },
         "menu_menu": {
             "texto1": [
-                "𝙏𝙃𝙀 𝙈𝙔𝙎𝙏𝙄𝘾 - 𝘽𝙊𝙏",
+                "KILL - BOT",
                 "▢ *Hola,*",
                 "_*< TUS ESTADÍSTICAS />*_",
                 "▢ *Nivel:* ",
                 "▢ *Experiencia:* ",
                 "▢ *Rango:* ",
                 "▢ *Diamantes:* ",
-                "▢ *MysticCoins:* ",
+                "▢ *KillCoins:* ",
                 "▢ *Tokens:* ",
                 "▢ *Premium:* ",
                 " _*< LISTA DE MENUS />*_",
@@ -3372,7 +3372,7 @@
                 "║┈┈┈┈┈┈┈┈┈┈┈┈┈",
                 "Diamantes* 💎",
                 "Tokens* 🪙",
-                "MysticCoins* 👾",
+                "KillCoins* 👾",
                 "Exp* ⚡",
                 "╚═════════════════⬣"
             ]
