--- a/src/languages/ar.json
+++ b/src/languages/ar.json
@@ -4018,7 +4018,7 @@
                 "*—◉ استمر في الاستكشاف وأداء المهام لتحقيق طموحاتك في نقابة المغامرين. استمر في التفاعل مع البوت!*"
             ]
         },
-        "rpg_minar_mysticcoins": {
+        "rpg_minar_KillCoins": {
             "texto1": [
                 "ما شاء الله 😎 لقد حفرت",
                 "🌟✨ رائع!! لقد حصلت على",
