--- a/src/languages/pt-br.json
+++ b/src/languages/pt-br.json
@@ -3367,7 +3367,7 @@
                 "║┈┈┈┈┈┈┈┈┈┈┈┈┈",
                 "Diamantes* 💎",
                 "Tokens* 🪙",
-                "MysticCoins* 👾",
+                "KillCoins* 👾",
                 "Exp* ⚡",
                 "╚═════════════════⬣"
             ]
@@ -3490,7 +3490,7 @@
                 "*—◉ Continue explorando e realizando missões para alcançar novas alturas na Guilda dos Aventureiros. Continue interagindo com o Bot!*"
             ]
         },
-        "rpg_minar_mysticcoins": {
+        "rpg_minar_KillCoins": {
             "texto1": [
                 "Que pro 😎 você minerou",
                 "🌟✨ Legal!! Você recebe",
