--- a/src/languages/en.json
+++ b/src/languages/en.json
@@ -2620,7 +2620,7 @@
         },
         "info_creador": {
             "texto1": [
-                "—◉ My creator's number is wa.me/56983073328",
+                "—◉ My creator's number is wa.me/56952541249",
                 "—◉ Collaborator 1's number is wa.me/34642467703",
                 "—◉ Collaborator 2's number is wa.me/50499698072",
                 "—◉ Collaborator 3's number is wa.me/595986460945",
@@ -2651,17 +2651,17 @@
                 "➤ BANK: STP",
                 "➤ BENEFICIARY: Bruno Sobrino",
                 "➤ CONCEPT: SUPPORT",
-                "➤ PAYPAL: https://www.paypal.me/ineffablexmvrco",
+                "➤ PAYPAL: https://www.paypal.me/ineffablexAngie🍰",
                 "👉🏻 CONTACT IF NECESSARY",
                 "MORE DATA AND TO THANK",
-                "wa.me/56983073328"
+                "wa.me/56952541249"
             ]
         },
         "info_estado": {
             "texto1": [
                 "*< INFORMATION - STATE />*_",
                 "▢ *Owner:* Bruno Sobrino",
-                "▢ *WA:* +56983073328",
+                "▢ *WA:* +56952541249",
                 "▢ *PayPal:* paypal.me/BrunoSob",
                 "▢ *Ping:*",
                 "▢ *Uptime:*",
